add new models and review 01

--- a/nbs/01_pytorch_workflow.ipynb
+++ b/nbs/01_pytorch_workflow.ipynb
@@ -719,12 +719,469 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "752400a0-d4e8-4f1c-9b91-0bc8aab5cac1",
+   "metadata": {},
+   "source": [
+    "# Saving and loading a Pytorch model\n",
+    "If you've trained Pytorch model, chances are you'll want to save it and export it somewhere\n",
+    "\n",
+    "As in, you migt train it on Google Colab or your local machine with a GPU buy you'd like to now export it to some sort of applciation where others can use it\n",
+    "\n",
+    "Or maybe you'd like to save your progress on a model and come back and load it back later\n",
+    "\n",
+    "[PyTorch Saving and Loading models guide](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-model-for-inference)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5a4acabf-6dcb-4728-b384-5e67eb89f157",
+   "execution_count": 44,
+   "id": "c23fa6cc-9ac1-4306-a059-f56ec119cb49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model to: models/01_pytorch_workflow_model_0.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "# 1. Create model directory\n",
+    "MODEL_PATH = Path(\"models\")\n",
+    "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# 2. Create model save path\n",
+    "MODEL_NAME = \"01_pytorch_workflow_model_0.pth\"\n",
+    "MODEL_SAVE_PATH = MODEL_PATH/MODEL_NAME\n",
+    "\n",
+    "# 3. Save the model state dict\n",
+    "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+    "torch.save(obj=model_0.state_dict(),\n",
+    "          f=MODEL_SAVE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a75bb4e1-8afb-4b7d-93b7-1be9684cbaa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: models/models/01_pytorch_workflow_model_0.pth: No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l models/models/01_pytorch_workflow_model_0.pth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ba00f2c-b93c-4efe-87f5-9023a1206d07",
+   "metadata": {},
+   "source": [
+    "## Test by created another instance of LinearRegressionModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "40253b64-b1bc-4ca1-97e7-af2a5114b659",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model_0 = LinearRegressionModel()\n",
+    "\n",
+    "# Load the state_dict of our saved model (this will update the new instance of our model with trained weights and)\n",
+    "loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33665972-bf89-4f91-aaa7-b14523dd6c1b",
+   "metadata": {},
+   "source": [
+    "### Performing inference\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "856554d9-7544-4d87-8029-bd067e73d832",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 1. Put the loaded model into evaluation mode\n",
+    "loaded_model_0.eval()\n",
+    "\n",
+    "# 2. Ue the inference mode context manager to make predictions\n",
+    "with torch.inference_mode():\n",
+    "    # Perform a forward pass on the test data with the loaded model\n",
+    "    loaded_model_preds = loaded_model_0(x_test)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "81eea6bf-c0fc-4411-bff1-d0663b0a2e0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare previous model predictions with loaded model predictions (these should be the same)\n",
+    "y_preds == loaded_model_preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fbf928d-99f2-4a99-9962-b432af8bb258",
+   "metadata": {},
+   "source": [
+    "# Review - Putting it all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "806f2b6a-22e7-41ba-9db5-3a931d000cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.13.1'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Check pytorch version\n",
+    "torch.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "fae27a5f-a194-441c-bed7-af9ba1dbfde1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup device\n",
+    "\n",
+    "dtype = torch.float\n",
+    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2353f5b1-a2ce-43da-8903-e1913bbd50d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.0000],\n",
+       "         [0.0200],\n",
+       "         [0.0400],\n",
+       "         [0.0600],\n",
+       "         [0.0800],\n",
+       "         [0.1000],\n",
+       "         [0.1200],\n",
+       "         [0.1400],\n",
+       "         [0.1600],\n",
+       "         [0.1800]]),\n",
+       " tensor([[0.3000],\n",
+       "         [0.3140],\n",
+       "         [0.3280],\n",
+       "         [0.3420],\n",
+       "         [0.3560],\n",
+       "         [0.3700],\n",
+       "         [0.3840],\n",
+       "         [0.3980],\n",
+       "         [0.4120],\n",
+       "         [0.4260]]))"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create weight and bias\n",
+    "weight = 0.7\n",
+    "bias = 0.3\n",
+    "\n",
+    "# Create range values\n",
+    "start = 0\n",
+    "end = 1\n",
+    "step = 0.02\n",
+    "\n",
+    "# Create X and Y (features and labels)\n",
+    "x = torch.arange(start, end, step).unsqueeze(dim=1) # without unsqueeze, errors will happen later on\n",
+    "y = weight * x + bias\n",
+    "x[:10], y[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36471ef3-9e65-46d3-be00-5206757a7f7c",
+   "metadata": {},
+   "source": [
+    "## Building a PyTorch linear model\n",
+    "We've got some data, now it's time to make a model.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "af4540f6-8e4d-4b5a-af82-92d4ee6e6f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(LinearRegressionModelV2(\n",
+       "   (linear_layer): Linear(in_features=1, out_features=1, bias=True)\n",
+       " ),\n",
+       " OrderedDict([('linear_layer.weight', tensor([[0.7645]])),\n",
+       "              ('linear_layer.bias', tensor([0.8300]))]))"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class LinearRegressionModelV2(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # Use nn.Linear() for creating the model parameters\n",
+    "        self.linear_layer = nn.Linear(in_features=1,\n",
+    "                                     out_features=1)\n",
+    "        \n",
+    "    # Define the forward computation (input data x flows through nn.Linear())\n",
+    "    def forward(self, x:torch.Tensor) -> torch.Tensor:\n",
+    "        return self.linear_layer(x)\n",
+    "    \n",
+    "# Set the manual seed when creating the model\n",
+    "torch.manual_seed(42)\n",
+    "model_1 = LinearRegressionModelV2()\n",
+    "model_1, model_1.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f0c595-8315-49a2-87e5-679bfb6d07f2",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Notice the outputs of model_1.state_dict(), the nn.Linear() layer created a random weight and bias parameter for us."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a336d41e-ecdd-4ef3-96ab-82a38c8152a5",
+   "metadata": {},
+   "source": [
+    "## Check model device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "83bfa807-ea46-415d-8130-34b3a65f97d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(model_1.parameters()).device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "cc4cbf4f-6962-48a3-8c66-098ff8f26a82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='mps', index=0)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set the model to GPU if it's availabele\n",
+    "model_1.to(device)\n",
+    "next(model_1.parameters()).device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcd63939-3aac-4cb4-bdb0-a8e6c84ef508",
+   "metadata": {},
+   "source": [
+    "## Training\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "a46f420a-7888-4256-8a38-fb4a74a25689",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create loss function\n",
+    "loss_fn = nn.L1Loss()\n",
+    "\n",
+    "# Create optimizer\n",
+    "optimizer = torch.optim.SGD(params=model_1.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a173b6e6-45e9-427c-bc9a-eb4843142f72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Module.parameters of LinearRegressionModelV2(\n",
+       "  (linear_layer): Linear(in_features=1, out_features=1, bias=True)\n",
+       ")>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_1.parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6962dce-bfef-4e3b-b5e8-757e15378433",
+   "metadata": {},
+   "source": [
+    "<b>PyTorch training loop steps</b>\n",
+    "1. Forward pass - The model goes through all of the training data once, performing its forward() function calculations (model(x_train)).\n",
+    "\n",
+    "2. Calculate the loss - The model's outputs (predictions) are compared to the ground truth and evaluated to see how wrong they are (loss = loss_fn(y_pred, y_train).\n",
+    "\n",
+    "3. Zero gradients - The optimizers gradients are set to zero (they are accumulated by default) so they can be recalculated for the specific training step (optimizer.zero_grad()).\n",
+    "\n",
+    "4. Perform backpropagation on the loss - Computes the gradient of the loss with respect for every model parameter to be updated (each parameter with requires_grad=True). This is known as backpropagation, hence \"backwards\" (loss.backward()).\n",
+    "\n",
+    "5. Step the optimizer (gradient descent) - Update the parameters with requires_grad=True with respect to the loss gradients in order to improve them (optimizer.step())."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45a9c685-3eb2-4bbe-9fdc-ceb593a3b16b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "# Set the number of epochs\n",
+    "epochs = 1000\n",
+    "\n",
+    "# Put data on the available device\n",
+    "# Without this, error will happen (not all model/data on device)\n",
+    "x_train = x_train.to(device)\n",
+    "x_test = x_test.to(device)\n",
+    "y_train = y_train.to(device)\n",
+    "y_test = y_test.to(device)\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    ### Training ###\n",
+    "    model_1.train() # train mode is on by default after construction\n",
+    "    \n",
+    "    # 1. Forward pass\n",
+    "    y_pred = model_1(x_train)\n",
+    "    \n",
+    "    # 2. Calculate loss\n",
+    "    \n",
+    "    # 3. Zero grad optimizer\n",
+    "    optimizer.zero_grad()"
+   ]
   }
  ],
  "metadata": {
